# FinalProject

./: AddressBook.py  Dockerfile  README.md  abstract.py  app.py  config.py  connect.py  diagramm.xml  info.py  requirements.txt
bot/: pyproject.toml
